Fixed stretchy videos overflowing content box

--- a/yts/cssbin/styles.css
+++ b/yts/cssbin/styles.css
@@ -535,3 +535,7 @@ a.title:hover {
 .redtext {
     color: #f00;
 }
+.googlevideo-player {
+    display: flex;
+    max-height:100%;
+}
